[package]
name = "dregg-circuit"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Zero-knowledge proof circuits for dregg authorization token chains"

[dependencies]
# Plonky3 core (workspace-pinned)
p3-field = { workspace = true, optional = true }
p3-baby-bear = { workspace = true, optional = true }
p3-air = { workspace = true, optional = true }
p3-matrix = { workspace = true, optional = true }
p3-uni-stark = { workspace = true, optional = true }
p3-challenger = { workspace = true, optional = true }
p3-commit = { workspace = true, optional = true }
p3-fri = { workspace = true, optional = true }
p3-symmetric = { workspace = true, optional = true }
p3-dft = { workspace = true, optional = true }
p3-poseidon2 = { workspace = true, optional = true }
p3-mds = { workspace = true, optional = true }
p3-monty-31 = { workspace = true, optional = true }
p3-merkle-tree = { workspace = true, optional = true }
p3-util = { workspace = true, optional = true }

# Plonky3-recursion (workspace-pinned)
p3-recursion = { workspace = true, optional = true }
p3-circuit = { workspace = true, optional = true }
p3-circuit-prover = { workspace = true, optional = true }
p3-batch-stark = { workspace = true, optional = true }
p3-lookup = { workspace = true, optional = true }
p3-poseidon2-circuit-air = { workspace = true, optional = true }

# Dregg DSL proc-macro — the temporal_predicate_dsl module is the manually-expanded
# equivalent of the #[dregg_circuit] macro output (the macro cannot self-reference
# within its own crate, so we expand it manually).
dregg-dsl = { path = "../dregg-dsl" }

postcard = { version = "1", features = ["alloc"] }

blake3 = "1"
getrandom = { workspace = true }
serde = { version = "1", features = ["derive"] }
tracing = { version = "0.1", optional = true }
itertools = { version = "0.14", optional = true }
rand = { version = "0.10", optional = true }
rmp-serde = { version = "1.2", optional = true }
rand_core = { version = "0.6", optional = true, features = ["getrandom"] }

# Mina/Kimchi - Plonk variant over Pasta curves with IPA commitments
kimchi = { git = "https://github.com/o1-labs/proof-systems", rev = "36a8b510", optional = true, default-features = false, features = ["prover"] }
poly-commitment = { git = "https://github.com/o1-labs/proof-systems", rev = "36a8b510", optional = true }
mina-curves = { git = "https://github.com/o1-labs/proof-systems", rev = "36a8b510", optional = true, default-features = false, features = ["asm"] }
mina-poseidon = { git = "https://github.com/o1-labs/proof-systems", rev = "36a8b510", optional = true }
groupmap = { git = "https://github.com/o1-labs/proof-systems", rev = "36a8b510", optional = true }
ark-ff = { version = "0.5", optional = true, default-features = false, features = ["asm"] }
ark-poly = { version = "0.5", optional = true, default-features = false }
ark-ec = { version = "0.5", optional = true, default-features = false }

[features]
default = ["plonky3", "recursion", "mina"]
mock = []
dev = []
plonky3 = [
    "p3-field", "p3-baby-bear", "p3-air", "p3-matrix", "p3-uni-stark",
    "p3-challenger", "p3-commit", "p3-fri", "p3-symmetric", "p3-dft",
    "p3-poseidon2", "p3-mds", "p3-monty-31", "p3-merkle-tree", "p3-util",
    "rand", "tracing", "itertools",
]
mina = [
    "kimchi", "poly-commitment", "mina-curves", "mina-poseidon", "groupmap",
    "ark-ff", "ark-poly", "ark-ec", "rmp-serde", "rand_core",
]
recursion = [
    "plonky3",
    "dep:p3-recursion", "dep:p3-circuit", "dep:p3-circuit-prover",
    "dep:p3-batch-stark", "dep:p3-lookup", "dep:p3-poseidon2-circuit-air",
]

[dev-dependencies]
criterion = { workspace = true }
dregg-bridge = { path = "../bridge", features = ["test-utils"] }
dregg-cell = { path = "../cell" }
dregg-trace = { path = "../trace" }
dregg-token = { path = "../token", default-features = false, features = ["macaroon", "rand-deps"] }
dregg-turn = { path = "../turn" }
# Used by benches (proof_benchmarks, practical_benchmarks). dregg-dsl-runtime is a
# thin re-export over dregg-circuit::dsl; this is a dev-dep cycle that Cargo permits
# (dev-deps are not used when building dregg-circuit as a library dependency).
dregg-dsl-runtime = { path = "../dregg-dsl-runtime" }
getrandom = { workspace = true }
blake3 = "1"
rmp-serde = { workspace = true }
# proof-economics measurements (tests/proof_economics.rs): structural walk of
# serialized proofs to count commitment-path digests for the pickles-bridge estimate.
serde_json = { workspace = true }

[[bench]]
name = "stark_bench"
harness = false

[[bench]]
name = "proof_benchmarks"
harness = false

[[bench]]
name = "practical_benchmarks"
harness = false

[lints]
workspace = true
