[package]
name = "dregg-circuit"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Zero-knowledge proof circuits for dregg authorization token chains"

[dependencies]
# Plonky3 core (workspace-pinned)
p3-field = { workspace = true, optional = true }
p3-baby-bear = { workspace = true, optional = true }
p3-air = { workspace = true, optional = true }
p3-matrix = { workspace = true, optional = true }
p3-uni-stark = { workspace = true, optional = true }
p3-challenger = { workspace = true, optional = true }
p3-commit = { workspace = true, optional = true }
p3-fri = { workspace = true, optional = true }
p3-symmetric = { workspace = true, optional = true }
p3-dft = { workspace = true, optional = true }
p3-poseidon2 = { workspace = true, optional = true }
p3-mds = { workspace = true, optional = true }
p3-monty-31 = { workspace = true, optional = true }
p3-merkle-tree = { workspace = true, optional = true }
p3-util = { workspace = true, optional = true }

# Plonky3-recursion (workspace-pinned)
p3-recursion = { workspace = true, optional = true }
p3-circuit = { workspace = true, optional = true }
p3-circuit-prover = { workspace = true, optional = true }
p3-batch-stark = { workspace = true, optional = true }
p3-lookup = { workspace = true, optional = true }
p3-poseidon2-circuit-air = { workspace = true, optional = true }

# Dregg DSL proc-macro — the temporal_predicate_dsl module is the manually-expanded
# equivalent of the #[dregg_circuit] macro output (the macro cannot self-reference
# within its own crate, so we expand it manually).
dregg-dsl = { path = "../dregg-dsl" }

postcard = { version = "1", features = ["alloc"] }

blake3 = "1"
getrandom = { workspace = true }
serde = { version = "1", features = ["derive"] }
tracing = { version = "0.1", optional = true }
itertools = { version = "0.14", optional = true }
rand = { version = "0.10", optional = true }
rmp-serde = { version = "1.2", optional = true }

# PLATFORM gates only: `plonky3`/`prover` gate the NATIVE prover stack (off for
# wasm32, which compiles the crate's always-present pure logic). The old `mock = []`
# and `dev = []` features gated NOTHING (zero cfg uses) and were deleted.
# See docs/FEATURE-HYGIENE.md.
[features]
default = ["plonky3", "prover"]
plonky3 = [
    "p3-field", "p3-baby-bear", "p3-air", "p3-matrix", "p3-uni-stark",
    "p3-challenger", "p3-commit", "p3-fri", "p3-symmetric", "p3-dft",
    "p3-poseidon2", "p3-mds", "p3-monty-31", "p3-merkle-tree", "p3-util",
    "rand", "tracing", "itertools", "rmp-serde",
]
# `verifier` = the PROVER-FREE batch-STARK VERIFY surface (cutover C2). It pulls the
# multi-table batch deps the verify path needs (`p3-batch-stark`'s `verify_batch` is
# prover-free per the p3-batch-stark audit; `from_airs_and_degrees(..).common` builds
# only the symbolic `Lookups` + empty preprocessed for the IR-v2 AIRs, no DFT/`prove_batch`)
# but NOT the recursion-prover crates. It gates the VERIFY half of `descriptor_ir2`
# (`verify_vm_descriptor2{,_with_config}`, the AIRs, `ir2_config`) so the wasm /
# no-lean-link verifier can verify rotated proofs under `--no-default-features
# --features verifier` without monomorphizing the prover DFT or linking `prove_batch`.
verifier = [
    "plonky3",
    "dep:p3-batch-stark", "dep:p3-lookup", "dep:p3-poseidon2-circuit-air",
]
prover = [
    "verifier",
    "dep:p3-recursion", "dep:p3-circuit", "dep:p3-circuit-prover",
]

[dev-dependencies]
criterion = { workspace = true }
dregg-bridge = { path = "../bridge", features = ["test-utils"] }
dregg-cell = { path = "../cell" }
# Test-layer ONLY: the shielded both-polarity tests construct a wrapped-negative
# value commitment to exercise the per-output range-proof inflation gate. The
# circuit crate stays upstream of the curve stack (value commitments ride as
# opaque bytes); this dep is confined to integration tests at the cell/test seam.
curve25519-dalek = { version = "4", features = ["alloc"] }
dregg-trace = { path = "../trace" }
dregg-token = { path = "../token", default-features = false, features = ["macaroon", "rand-deps"] }
dregg-turn = { path = "../turn" }
# Used by benches (proof_benchmarks, practical_benchmarks). dregg-dsl-runtime is a
# thin re-export over dregg-circuit::dsl; this is a dev-dep cycle that Cargo permits
# (dev-deps are not used when building dregg-circuit as a library dependency).
dregg-dsl-runtime = { path = "../dregg-dsl-runtime" }
getrandom = { workspace = true }
blake3 = "1"
rmp-serde = { workspace = true }
# proof-economics measurements (tests/proof_economics.rs): structural walk of
# serialized proofs to count commitment-path digests for the pickles-bridge estimate.
serde_json = { workspace = true }

[[bench]]
name = "stark_bench"
harness = false

[[bench]]
name = "proof_benchmarks"
harness = false

[[bench]]
name = "practical_benchmarks"
harness = false

[lints]
workspace = true
