[package]
name = "dregg-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "dregg"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env", "color", "suggestions", "wrap_help"] }
clap_complete = "4"
console = "0.15"
indicatif = "0.17"
dialoguer = "0.11"
comfy-table = "7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
blake3 = "1"
bs58 = "0.5"
dirs = "5"
urlencoding = "2"
shellexpand = "3"
# `dregg id` profile store: key generation + the SDK-matching derivation
# (blake3::derive_key("dregg/0", seed) → Ed25519). Kept dependency-light on
# purpose — the CLI replicates the derivation instead of pulling the whole
# workspace via dregg-sdk; the golden-vector test (mirrored in
# sdk/src/profiles.rs) pins the two together.
ed25519-dalek = { version = "2", features = ["std"] }
getrandom = { workspace = true }
hex = "0.4"
zeroize = { workspace = true }

[lints]
workspace = true
