[package]
name = "dregg-cli"
version.workspace = true
edition.workspace = true
# `repository`/`homepage` inherited + a `description`: `dist` (release management,
# see root Cargo.toml [workspace.metadata.dist]) requires `repository` on each
# distable package (the workspace-metadata fallback is not accepted), and the
# Homebrew formula uses `description` + `homepage` for its metadata.
repository.workspace = true
homepage.workspace = true
description = "dregg CLI — the command-line client for the dregg verified-capability federation (identities, tokens, node interaction)"

[[bin]]
name = "dregg"
path = "src/main.rs"

# `dist` opt-in: the workspace default is `dist = false`; this ships the `dregg`
# CLI binary. The CLI is Lean-free and cross-platform clean, so it inherits the
# workspace target set (macOS+Linux x86_64/aarch64 + Windows-msvc) — no
# per-package `targets` override needed here. (No version bump: the dev-tag
# scheme is `v0.0.0-dev`; crates stay at 0.1.0 until ember cuts a tag.)
[package.metadata.dist]
dist = true

[dependencies]
clap = { version = "4", features = ["derive", "env", "color", "suggestions", "wrap_help"] }
clap_complete = "4"
console = "0.15"
indicatif = "0.17"
dialoguer = "0.11"
comfy-table = "7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
blake3 = "1"
bs58 = "0.5"
dirs = "5"
urlencoding = "2"
shellexpand = "3"
# `dregg id` profile store: key generation + the SDK-matching derivation
# (blake3::derive_key("dregg/0", seed) → Ed25519). Kept dependency-light on
# purpose — the CLI replicates the derivation instead of pulling the whole
# workspace via dregg-sdk; the golden-vector test (mirrored in
# sdk/src/profiles.rs) pins the two together.
ed25519-dalek = { version = "2", features = ["std"] }
getrandom = { workspace = true }
hex = "0.4"
zeroize = { workspace = true }
# DreggDL: the checkable deployment spec (`dregg deploy check|apply`). The parser,
# lowering, and the four static assurance checks live ONCE in this crate; the CLI
# is a thin binding that surfaces them under the primary `dregg` binary so a
# stranger discovers them without a second tool.
dregg-deploy = { path = "../dregg-deploy" }

[dev-dependencies]
# Unique throwaway roots for the hermetic `DREGG_HOME` config test, so it
# never touches the operator's real `~/.dregg` (mirrors the preflight
# `cli_config_init` check, which redirects `config init` the same way).
tempfile = { workspace = true }

[lints]
workspace = true
