[package]
name = "collective-choice"
version = "0.1.0"
edition = "2024"
description = "The general voting engine for dregg — poll → cap-bounded ballots → monotone verifiable tally → decision-turn, assembled from the four proven governance mechanisms (privacy-voting ballots, polis AffineLe quorum, tool-access-delegation non-amplifying sub_delegate, and the node nullifier set). Exposes a `VoteEngine` trait consumed by the CYOA and governance lanes."

# `collective-choice` is ASSEMBLY, not invention. Every tooth is a primitive
# that already ships and already bites through the verified executor:
#   - one-vote-per-ballot   : `WriteOnce(VOTE)` on a factory-born ballot cell
#                             (starbridge-privacy-voting).
#   - monotone tally        : `Monotonic(TALLY_i)` poll slots — a tally can only
#                             ever increase (starbridge-privacy-voting).
#   - quorum gate           : `AffineLe { M·RESOLVED − Σ TALLY_i ≤ 0 }` — the
#                             reusable in-cell M-of-N gate lifted from the polis
#                             council (`starbridge-apps/polis`).
#   - non-amplifying deleg. : `Mandate::sub_delegate` / `DelegTree::no_amplify`
#                             (`dregg-intent::agent_mandate`) — liquid democracy.
#   - one-vote nullifier    : a `used_ballot_nullifiers` set mirroring the node's
#                             `used_proof_hashes` (`node/src/state.rs`).
#
# A workspace MEMBER of the breadstuffs root (registered in `members`, not
# `default-members`). The root `[workspace]` + `[patch]` tables apply; no
# standalone `[workspace]`/`[patch]` here.

[dependencies]
dregg-app-framework = { path = "../app-framework" }
dregg-cell = { path = "../cell", default-features = false }
dregg-intent = { path = "../intent" }
dregg-types = { path = "../types" }
starbridge-privacy-voting = { path = "../starbridge-apps/privacy-voting" }

blake3 = "1"
