[package]
name = "constraint-lowering"
version = "0.1.0"
edition = "2021"

# Own workspace (excluded from the root) so `cd constraint-lowering && cargo test`
# builds just this crate + dregg-circuit, robust to churn elsewhere in the tree.
[workspace]

[dependencies]
dregg-circuit = { path = "../circuit" }
