[package]
name = "constraint-lowering"
version = "0.1.0"
edition = "2021"

# Folded into the root workspace (members + default-members — its sole dep
# dregg-circuit is already a member, so folding adds nothing to the resolve).
[dependencies]
dregg-circuit = { path = "../circuit" }

[lints]
workspace = true
