[package]
name = "dregg-coord"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Two-layer turn coordination: causal chaining + atomic multi-party turns"

[dependencies]
dregg-cell = { path = "../cell" }
dregg-blocklace = { path = "../blocklace" }
dregg-turn = { path = "../turn" }
dregg-types = { path = "../types" }
blake3 = "1"
ed25519-dalek = { version = "2", features = ["std"] }
serde = { version = "1", features = ["derive"] }

# UNCONDITIONAL (polarity-inverted, docs/FEATURE-HYGIENE.md §Lean): the coordinator's 2PC /
# causal-order / shared-budget decisions route through the VERIFIED Lean exports
# (`Dregg2.Exec.DistributedExports`: `dregg_coord_2pc_decide` = `TwoPhaseCommit.evaluate`,
# `dregg_coord_causal_order` = `CausalOrder.happenedBefore`, `dregg_coord_shared_budget` =
# `SharedBudgetDynamics.resolveOrdered`) on every native build; the native Rust runs as the
# DIFFERENTIAL sibling. The ONE opt-out is the `no-lean-link` platform feature (wasm32/zkvm).
dregg-lean-ffi = { path = "../dregg-lean-ffi" }

[features]
# PLATFORM gate, OFF by default: only wasm32/zkvm builds set it. It compiles the native-Rust
# fallback IN PLACE OF the verified Lean gates — a statement about the target's linker, never
# about which guarantees this dregg has.
no-lean-link = ["dregg-lean-ffi/no-lean-link"]

[lints]
workspace = true
