[package]
name = "dregg-coord"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Two-layer turn coordination: causal chaining + atomic multi-party turns"

[dependencies]
dregg-cell = { path = "../cell" }
dregg-blocklace = { path = "../blocklace" }
dregg-turn = { path = "../turn" }
dregg-types = { path = "../types" }
blake3 = "1"
ed25519-dalek = { version = "2", features = ["std"] }
serde = { version = "1", features = ["derive"] }
postcard = { version = "1", features = ["alloc"] }

# FFI-FREE BY CONSTRUCTION: the coordinator's 2PC / causal-order / shared-budget decisions route
# through the `verified_gate` SEAM (`CoordVerifiedGate`), never `dregg-lean-ffi` directly. A native
# node installs the Lean-backed gate (from `dregg-exec-lean`) once at startup; an FFI-free target
# (wasm / verifier-PD / pg) simply never registers one and the native-Rust differential sibling
# decides. The deleted `no-lean-link` feature is now a dependency choice, not a flag.

[lints]
workspace = true
